test/expected/explain_cast_a3a5i.out
explain (int[3][5])x
        ^
9: error: arithmetic or pointer type expected
